v20
Script execution error
File "/tmp/appRoot/streamlit_app.py", line 576
              vals.append(f"'{safe.get(column, "") }'")
                                                      ^
SyntaxError: f-string: unmatched '('
